objects/SDO_SCOM_Auction__c.object
<CustomObject>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>End date and time for Auction</description>
        <label>End Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which auction is getting created</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Auctions</relationshipLabel>
        <relationshipName>SDO_SCOM_Auctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <description>Stat Date and Time for Auction</description>
        <label>Start Date &amp; Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Starting_Bid_Price__c</fullName>
        <label>Starting Bid Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Web store for which auction is getting created</description>
        <label>Web Store</label>
        <referenceTo>WebStore</referenceTo>
        <relationshipLabel>Auctions</relationshipLabel>
        <relationshipName>SDO_SCOM_Auctions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Auction</label>
    <nameField>
        <label>Auction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Auctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>